cli/tests/testdata/test/ops_sanitizer_unstable.out
Check [WILDCARD]/testdata/test/ops_sanitizer_unstable.ts
running 2 tests from ./test/ops_sanitizer_unstable.ts
no-op ... ok ([WILDCARD])
leak interval ... FAILED ([WILDCARD])

failures:

./test/ops_sanitizer_unstable.ts > leak interval
Test case is leaking async ops.

- 1 async operation to sleep for a duration was started in this test, but never completed. This is often caused by not cancelling a `setTimeout` or `setInterval` call. The operation was started here:
    at [WILDCARD]
    at setInterval ([WILDCARD])
    at [WILDCARD]/testdata/test/ops_sanitizer_unstable.ts:3:3
    at [WILDCARD]

failures:

	./test/ops_sanitizer_unstable.ts
	leak interval

test result: FAILED. 1 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
